# husky-toolbox-labels

./: .gitignore  CLAUDE.md  README.md  label.py  labels.txt  pyproject.toml  requirements.txt
.beads/: issues.jsonl
src/label_generator/: __init__.py  exporter.py  kerned_text.py  label_builder.py  svg_profile.py  text_geometry.py
